; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_grep.c_lock_and_read_oid_file.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_grep.c_lock_and_read_oid_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.object_id*, i32*, i64*)* @lock_and_read_oid_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @lock_and_read_oid_file(%struct.object_id* %0, i32* %1, i64* %2) #0 {
  %4 = alloca %struct.object_id*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i8*, align 8
  store %struct.object_id* %0, %struct.object_id** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64* %2, i64** %6, align 8
  %8 = call i32 (...) @grep_read_lock()
  %9 = load %struct.object_id*, %struct.object_id** %4, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i64*, i64** %6, align 8
  %12 = call i8* @read_object_file(%struct.object_id* %9, i32* %10, i64* %11)
  store i8* %12, i8** %7, align 8
  %13 = call i32 (...) @grep_read_unlock()
  %14 = load i8*, i8** %7, align 8
  ret i8* %14
}

declare dso_local i32 @grep_read_lock(...) #1

declare dso_local i8* @read_object_file(%struct.object_id*, i32*, i64*) #1

declare dso_local i32 @grep_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
